tests/negative/typecheck/union-non-sum.orng
fn main() -> Int {
    let const A = Int || Float
    0
}